# miru

./: .gitignore  AGENTS.md  AIOStreams-Linux-Frontend-Plan.md  CMakeLists.txt  README.md  plan.md
.github/workflows/: ci.yml  macos-app.yml
docs/: dependencies.md  macos-build.md
qml/: Main.qml  Theme.qml
qml/components/: AddonUrlField.qml  AppButton.qml  BadgePill.qml  ChoiceChip.qml  ColorSettingRow.qml  EpisodeList.qml  Pill.qml  PosterCard.qml  ResumeCard.qml  SearchField.qml  SearchSpinner.qml  SectionRail.qml  SettingsCard.qml  SettingsCheck.qml  SettingsField.qml  StreamCard.qml
resources/: Sterzeck_badge.json
resources/mpv/modernz/: README.md
resources/mpv/uosc/: README.md
resources/mpv/uosc/scripts/uosc/: main.lua
scripts/: package-macos.sh
src/: main.cpp
src/app/: ApplicationController.cpp  ApplicationController.h  CachingNetworkFactory.h  WatchHistory.cpp  WatchHistory.h
src/platform/: MacWindowChrome.h  MacWindowChrome.mm
src/player/: ExternalMpvPlayer.cpp  ExternalMpvPlayer.h  MpvLaunchOptions.cpp  MpvLaunchOptions.h
src/services/: AIOStreamsClient.cpp  AIOStreamsClient.h  BadgeMatcher.cpp  BadgeMatcher.h  CinemetaClient.cpp  CinemetaClient.h  ImdbRatings.cpp  ImdbRatings.h  SubtitlesClient.cpp  SubtitlesClient.h  TraktClient.cpp  TraktClient.h
tests/: tst_aiostreams_client.cpp  tst_application_settings.cpp  tst_badge_matcher.cpp  tst_cinemeta_client.cpp  tst_mpv_launch_options.cpp  tst_watch_history.cpp
